# tz_vanger

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  req.pip
config/: settings.py  urls.py
gallery/: admin.py  models.py  urls.py  views.py
gallery/management/commands/: csu.py
gallery/migrations/: 0001_initial.py
gallery/templates/gallery/: landing.html
static/css/: base.css
static/js/: slider-syncing.js
templates/: base.html
